--- a/config.toml
+++ b/config.toml
@@ -1,7 +1,7 @@
 theme = "."
 baseurl = "/"
 languageCode = "en-us"
-title = "Nederland Greenhouse"
+title = "Nederland Greenhouse Project"
 googleAnalytics = ""
 disqusShortname = ""
 ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
@@ -11,50 +11,25 @@ ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
     post = "/:year/:month/:day/:slug/"
 
 [[menu.main]]
-    name = "volunteer saturdays"
-    url = "/volunteer/"
-    pre = "<i class='now-ui-icons design_app'></i>"
+    name = "Our Team"
+    url = "/team/"
+    pre = "<i class='now-ui-icons ui-2_chat-round'></i>"
     weight = 1
 [[menu.main]]
-    name = "Programs"
-    url = "/programming/"
-    pre = "<i class='now-ui-icons business_bank'></i>"
-    weight = 1
-[[menu.main]]
-    name = "Food Security"
-    url = "/food-security/"
-    pre = "<i class='now-ui-icons users_single-02'></i>"
+    name = "Upcoming Events"
+    url = "/events/"
+    pre = "<i class='now-ui-icons business_bulb-63'></i>"
     weight = 2
-[[menu.main]]
-    name = "Signup"
-    pre = "<i class='now-ui-icons clothes_tie-bow'></i>"
-    url = "/login/"
-    weight = 3
 [[menu.main]]
     name = "Community Build Process"
+    pre = "<i class='now-ui-icons objects_planet'></i>"
+    url = "/cbp/"
+    weight = 3
+[[menu.main]]
+    name = "Resources"
     pre = "<i class='now-ui-icons ui-1_settings-gear-63'></i>"
-    url = "#"
+    url = "/resources/"
     weight = 4
-    identifier = "dropdown"
-[[menu.main]]
-    name = "Timberframe Log Prep"
-    pre = "<i class='now-ui-icons files_paper'></i>"
-    url = "/timberframe/"
-    weight = 1
-    parent = "dropdown"
-[[menu.main]]
-    name = "Rubble Trench Foundations"
-    pre = "<i class='now-ui-icons ui-1_calendar-60'></i>"
-    url = "/foundation/"
-    weight = 2
-    parent = "dropdown"
-[[menu.main]]
-    name = "Thermal Mass & South Facing Glass"
-    pre = "<i class='now-ui-icons shopping_tag-content'></i>"
-    url = "/glass/"
-    weight = 2
-    parent = "dropdown"    
-    
 [[menu.footer]]
     identifier = "twitter"
     pre = "<i class='fa fa-twitter'></i>"
@@ -67,19 +42,19 @@ ignoreFiles = ["\\.Rmd$", "_files$", "_cache$"]
     weight = 2
 [[menu.footer]]
     identifier = "copyright"
-    name = "MIT"
+    name = "(C) 2019 Ned Greenhouse, Web by donation: SCD Hub using Hugo & Netlify"
     pre = "<i class='fa fa-balance-scale'></i>"
     url = "https://spdx.org/licenses/MIT"
     weight = 3
 
 
 [params]
-    background = "/img/bg11.jpg"
+    background = "/img/pics/veggies.jpg"
     tint = "yellow"
     custom_css = ["css/highlight.min.css"]
     custom_js = []
     date_format = "Mon, Jan 2, 2006"
-    description = "A community greenhouse and eco building demonstration projectlead by Earth Hop Designs in Nederland, Colorado USA, Novembner 2018."
+    description = "Nederland’s community greenhouse is a showcase of high altitude food sovereignty. The structure is made from reclaimed and locally sourced materials such as pavement rubble from Boulder and timber frames sourced from a local fire mitigation site. The heating mechanism is a heat transfer system, an off grid technology made with solar collectors, thermostat sensors, steel drums and radiant floor pipes. Once we reach our fundraising goals, this will be a repeatable off grid four season greenhouse that folks can build in other locations for greater food sovereignty. Check back here to learn about the greenhouse construction plans to build your own, get involved with upcoming fundraisers and action days and for free resources on alpine gardening."
 
     # options for highlight.js (version, additional languages, and theme)
     highlightjsVersion = "9.10.0"
